--- a/src/components/WatchVideo/index.css
+++ b/src/components/WatchVideo/index.css
@@ -1,9 +1,11 @@
 .like-icon {
   height: 25px;
   width: 30px;
+  color: inherit;
 }
 
 .save-icon {
   height: 50px;
   width: 30px;
+  color: inherit;
 }
